--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JS to do list",
   "private": true,
   "scripts": {
-    "test": "jest",
+    "test": "jest --watch",
     "build": "webpack",
     "start": "webpack-dev-server --open --config webpack.config.js"
   },
@@ -34,7 +34,7 @@
     "verbose": true,
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+      "\\.(css|scss)$": "identity-obj-proxy"
     }
   },
   "devDependencies": {
@@ -44,6 +44,7 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jest": "^23.7.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0"
   }
 }
